sumo/tests/duarouter/flows/errors/vehicle_empty_arrivalpos/routes.duarouter
<?xml version="1.0"?>

<!-- generated on 11/05/12 13:31:00 by SUMO duarouter Version dev-SVN-r12934
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.sf.net/xsd/duarouterConfiguration.xsd">

    <input>
        <net-file value="input_net.net.xml"/>
        <flow-files value="input_flows.flows.xml"/>
    </input>

    <output>
        <output-file value="routes.rou.xml"/>
    </output>

    <report>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.sf.net/xsd/routes_file.xsd">
</routes>
